# PHENOMS

./: .dockerignore  .gitignore  Cargo.toml  README.md  environment.yml  pyproject.toml  simulation_class.py  test.py  test_simulation.py  utils.py
.github/workflows/: docs.yml
docker/: README.md  benchmark-one-cpu.Dockerfile
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  outputs.rst  requirements.txt  usage.rst
docs/api/: comparison.rst  core.rst  detection.rst  index.rst  plotting.rst  preprocess.rst  qc_cleanup.rst
phenoms/: __init__.py  __main__.py  analysis.py  cleanup.py  cli.py  comparison.py  comparison_set.py  connectivity.py  dimensionality_reduction.py  hbond.py  io.py  outputs.py  plotting.py  preprocess.py  qc.py  simulation.py  structure.py  viewer_bfactor_html.py
scripts/: benchmark_kernel.py  benchmark_plcg2_truncations.py  compare_rust_mdtraj_difference_plot.py  debug_docker_all_methods.py  debug_docker_isolate.py  fix_plcg2_table_totals.py  preprocess_gromacs_to_pdb.py  preprocess_plcg2_for_benchmark.py  renumber_many_to_reference.py  renumber_pdb_to_reference.py  run_benchmark_docker_1cpu.sh  run_benchmark_plcg2_docker.sh  run_test_data_plots.py
src/: lib.rs
tests/: test_analysis.py  test_api_extensions.py  test_cleanup_renumber.py  test_comparison.py  test_comparison_set.py  test_connectivity.py  test_hbond.py  test_plotting.py  test_preprocess.py  test_qc.py  test_rust_hbond_speed.py  test_simulation_set.py
