[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phenoms"
version = "0.2.0"
description = "Backbone H-bond network analysis for MD simulations (HDX-MS style)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "PHENOMS" }]
keywords = ["molecular-dynamics", "hydrogen-bonds", "HDX-MS", "backbone"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mdtraj>=1.9",
    "polars>=1.0",
    "pandas>=1.0",
    "numpy>=1.20",
    "matplotlib>=3.5",
    "seaborn>=0.11",
    "tqdm>=4.60",
    "joblib>=1.0",
    "scikit-learn>=1.0",
    "networkx>=3.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
structure = ["biopython>=1.79"]
benchmark = ["MDAnalysis>=2.4"]

[project.scripts]
phenoms = "phenoms.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["phenoms*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
